Apply fixes for UseStandardCharsets PMD violations